src/objects/Txn_Payment_To_Charge_Mapping__c.object
<CustomObject>
    <description>in this object we store the payment id, charge id and amount. need of this is : in this application we have partially paid charge ex charge is 100 and to pay this charge customer took 3 payments like 30,20 and 50 so its like single payment -&gt; multiple charge or multiple charge single payment, could be two ways so we need to capture these data. same apply for credit too.

If charge is getting clear using credit than credit Date and description is also getting stored on this object for tracking a history.</description>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field will be used to store the description while clearing charge with the credit. This field has no use if the charge is getting cleared by payment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folio_Id__c</fullName>
        <label>Folio Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Here we will store what method is used to clear the charge ie payment or credit.</description>
        <label>Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Id__c</fullName>
        <label>Payment Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount_paid__c</fullName>
        <label>amount paid</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>creditDate__c</fullName>
        <description>This field will record the credit applied date if charge is cleared by credit. Again there is no use of this if charge is getting cleared by payment</description>
        <label>creditDate</label>
        <type>Date</type>
    </fields>
    <label>Txn Payment To Charge Mapping</label>
    <nameField>
        <displayFormat>PtoC-{000000}</displayFormat>
        <label>Txn Payment To Charge Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Txn Payment To Charge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>